gave up and removed routing. :(
